cluster/apps/gpss/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gpss-service
spec:
  selector:
    app: gpss
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: ClusterIP
