cluster/apps/gpss/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gpss
spec:
  parentRefs:
    - name: envoy-aisling-dev-http
      namespace: network
  hostnames:
    - gpss.aisling.dev
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: gpss-service
      namespace: default
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
